--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /client/lib/osrs/
 /injector/tmp/
 /injector/osrs/
+/client/lib/dex-tools-2.1-SNAPSHOT/*.jar
+/client/lib/dex-tools-2.1-SNAPSHOT/*.dex
