--- a/client/build.gradle
+++ b/client/build.gradle
@@ -47,24 +47,30 @@ android {
     }
 
     task patchRSAPI(type: Copy) {
-        from file("./client-debug/smali_classes3/net/")
+        from file("./client-debug/smali_classes5/net/")
         into file("./osrs/smali/net/")
     }
 
     task patchRLAPI(type: Copy) {
+        from file("./client-debug/smali_classes6/net/")
+        into file("./osrs/smali/net/")
+        //eachFile { if (it.relativePath.getFile(destinationDir).exists()) it.exclude() }
+    }
+
+    task patchHttpApi(type: Copy) {
         from file("./client-debug/smali_classes4/net/")
         into file("./osrs/smali/net/")
         //eachFile { if (it.relativePath.getFile(destinationDir).exists()) it.exclude() }
     }
 
     task patchInjectionAnnotations(type: Copy) {
-        from file("./client-debug/smali_classes5/net/")
+        from file("./client-debug/smali_classes7/net/")
         into file("./osrs/smali/net/")
         //eachFile { if (it.relativePath.getFile(destinationDir).exists()) it.exclude() }
     }
 
     task patchSLF4J(type: Copy) {
-        from file("./client-debug/smali/org/slf4j/")
+        from file("./client-debug/smali_classes3/org/slf4j/")
         into file("./osrs/smali/org/slf4j")
     }
 
@@ -81,6 +87,31 @@ android {
     task patchGoogle3(type: Copy) {
         from file("./client-debug/smali/com/google/common/base/Preconditions.smali")
         into file("./osrs/smali/com/google/common/base/Preconditions.smali")
+    }
+
+    task patchGoogle4(type: Copy) {
+        from file("./client-debug/smali/com/google/common/cache/")
+        into file("./osrs/smali/com/google/common/cache/")
+    }
+
+    task patchGoogle5(type: Copy) {
+        from file("./client-debug/smali/com/google/common/base/Suppliers.smali")
+        into file("./osrs/smali/com/google/common/cache/base/")
+    }
+
+    task patchGoogle6(type: Copy) {
+        from file("./client-debug/smali/com/google/common/base/Suppliers**")
+        into file("./osrs/smali/com/google/common/cache/base/")
+    }
+
+    task patchOkhttp(type: Copy) {
+        from file("./client-debug/smali/okhttp3/")
+        into file("./osrs/smali/okhttp3/")
+    }
+
+    task patchOkio(type: Copy) {
+        from file("./client-debug/smali/okio/")
+        into file("./osrs/smali/okio/")
     }
 
     task replaceManifest(type: Copy) {
@@ -128,10 +159,16 @@ android {
         patchRLAPI.dependsOn patchRSAPI
         patchInjectionAnnotations.dependsOn patchRLAPI
         patchSLF4J.dependsOn patchInjectionAnnotations
-        patchGoogle1.dependsOn patchSLF4J
+        patchHttpApi.dependsOn patchSLF4J
+        patchOkhttp.dependsOn patchHttpApi
+        patchOkio.dependsOn patchOkhttp
+        patchGoogle1.dependsOn patchOkio
         patchGoogle2.dependsOn patchGoogle1
         patchGoogle3.dependsOn patchGoogle2
-        replaceManifest.dependsOn patchGoogle3
+        patchGoogle4.dependsOn patchGoogle3
+        patchGoogle5.dependsOn patchGoogle4
+        patchGoogle6.dependsOn patchGoogle5
+        replaceManifest.dependsOn patchGoogle6
         multidexPatch1.dependsOn replaceManifest
         multidexPatch2.dependsOn multidexPatch1
         assembleOsiris.dependsOn multidexPatch2
@@ -156,7 +193,9 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation project(":http-api")
     implementation project(":runelite-api")
     implementation project(":runescape-api")
     testImplementation 'junit:junit:4.13.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
 }
