--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,8 @@ org.gradle.jvmargs=-Xmx1536m
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.caching=true
 org.gradle.configureondemand=true
+android.useNewApkCreator=false
 
